p2/confs/app1/app1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: danipe1970/app1:v0
          #image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 80
            #- containerPort: 8080
